# asv_tachyon

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  data-contract.html  genindex.html  index.html  index.md  objects.inv  pixi.toml  pyproject.toml  readme_src.org  search.html  searchindex.js  sitemap.xml  tbump.toml  towncrier.toml  usage.html  views.html
.doctrees/: data-contract.doctree  environment.pickle  index.doctree  usage.doctree  views.doctree
.github/workflows/: ci.yml  docs.yml  publish.yml
_static/: documentation_options.js
adapters/: criterion_to_asv.py  pytest_benchmark_to_asv.py
changelog.d/: 1.feat.md  2.bugfix.md  profiles_cleanup.feature.md  readme.md
docs/: SOTA_DESIGN.md  SOTA_SHOWCASE.md
docs/orgmode/: index.org
docs/orgmode/contributing/: index.org
docs/orgmode/explanation/: sampling_vs_tracing.org
docs/orgmode/howto/: asv_plugin.org  diff_flamegraph.org
docs/orgmode/reference/: cli.org  formats.org
docs/orgmode/tutorials/: first_sample.org
docs/source/: conf.py  data-contract.rst  index.rst  usage.rst  views.rst
docs/source/_static/: custom.css
docs/workflows/: asv-studio.yml
fixtures/sample_site/: commits.json  index.json  info.json  profiles.json  regressions-ignore.json  regressions.json
fixtures/sample_site/graphs/branch-main/machine-cheetah/python-3.12/: mem_dict.json  mem_list.json  ray_alloc.json  sample_hot_path.json  time_keys.json  time_sort.json  time_values.json
fixtures/sample_site/graphs/branch-main/machine-cheetah/python-3.13/: mem_list.json  peakmem_parse.json  ray_alloc.json  sample_hot_path.json  time_keys.json  time_ranges.json  time_sort.json  track_count.json
fixtures/sample_site/graphs/summary/: time_sort.json
fixtures/sample_site/profiles/: demo.html
fixtures/sample_site/profiles/memray/: ray_alloc.html
fixtures/sample_site/profiles/tachyon/: sample_hot_path.html
scripts/: org_to_md.sh
src/asv_tachyon/: __init__.py  __main__.py  cli.py  driver.py  gui.py  paths.py  plugin.py  sample.py  util.py
src/asv_tachyon/static/: index.html
src/asv_tachyon/static/assets/: index-B0unbFF9.css  index-B2njvZum.js  index-B8pGncT3.css  index-BSLTruSp.js  index-BXNSGPqu.js  index-BYPdhxiS.js  index-BlCFf0Qz.js  index-C-9tkAjS.css  index-CAs3UPnH.js  index-CEX97ddf.js  index-CFuR2JJD.js  index-CYI0qwBh.js  index-C_cvYovp.js  index-CtAp73V9.css  index-CyuKLua_.css  index-D0F2vfak.css  index-DQNQmoOZ.css  index-Deh4ERef.js  index-DgMt1YbG.js  index-Dh6V6moq.js  index-Dnr2GZxu.js  index-Dtmyu2iE.js  index-DzTipKbv.css  index-Hu6CAwZ5.css
tests/: test_driver_unit.py  test_graph_path.py  test_gui.py  test_sample_cmd.py  test_util.py
web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: Chart.tsx  CodeBlock.tsx  DistributionPanel.tsx  EmptyState.tsx  FilterChips.tsx  HeatmapView.tsx  InventoryView.tsx  MultiplesView.tsx  OverviewTiles.tsx  RegressionsView.tsx  ReportSubview.tsx  SummaryGrid.tsx
web/src/lib/: asv.ts  detectLang.ts  inventory.ts  mute.ts  sidecars.ts  stats.ts
