[project]
name = "asv-tachyon"
dynamic = ["version"]
description = "Modern web UI for airspeed velocity (ASV) benchmark results"
authors = [{name = "Rohit Goswami", email = "rgoswami@ieee.org"}]
maintainers = [{name = "Rohit Goswami", email = "rgoswami@ieee.org"}]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["asv", "benchmark", "dashboard", "visualization", "frontend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Benchmark",
]

[project.urls]
Source = "https://github.com/HaoZeke/asv_tachyon"
Issues = "https://github.com/HaoZeke/asv_tachyon/issues"
Documentation = "https://haozeke.github.io/asv_tachyon/"

[project.scripts]
asv-tachyon = "asv_tachyon.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0"]
docs = [
    "sphinx>=8.0",
    "shibuya>=2024.1",
    "sphinx-sitemap>=2.5",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/asv_tachyon/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/asv_tachyon"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/web",
  "/fixtures",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/docs/images",
  "/docs/source",
  "/branding",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
